# TP-algorithms

./: README.md
mod1/Task_1/: ReadMe.txt  Task_1.cpp
mod1/Task_2/: CMakeLists.txt  ReadMe.txt  Task_2.cpp
mod1/Task_3/: CMakeLists.txt  ReadMe.txt  Task_3.cpp
mod1/Task_4/: CMakeLists.txt  ReadMe.txt  Task_4.cpp
mod1/Task_5/: CMakeLists.txt  ReadMe.txt  Task_5.cpp
mod1/Task_6/: CMakeLists.txt  ReadMe.txt  Task_6.cpp
mod1/Task_7/: CMakeLists.txt  ReadMe.txt  Task_7.cpp
mod2/Task_1/: CMakeLists.txt  Task_1.cpp
mod2/Task_2/: CMakeLists.txt  Task_2.cpp
mod2/Task_4/: CMakeLists.txt  Task_4.cpp
mod3/Task_1/: ArcGraph.cpp  ArcGraph.h  CMakeLists.txt  IGraph.h  ListGraph.cpp  ListGraph.h  MatrixGraph.cpp  MatrixGraph.h  SetGraph.cpp  SetGraph.h  main.cpp
mod3/Task_2/: Task_2.cpp
mod3/Task_3/: CMakeLists.txt  Task_3.cpp
